Enhance UI and functionality for travel itinerary planning
- Added Tailwind CSS for improved styling and layout.
- Integrated Google Maps API for dynamic map features.
- Implemented user interface components for location search and itinerary display.
- Created functions for managing location cards and timeline interactions.
- Established AI integration for generating travel plans based on user input.
- Updated package dependencies for better compatibility and performance.

--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^0.7.0"
+    "@google/genai": "^0.7.0",
+    "@types/google.maps": "^3.58.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "typescript": "~5.7.2",
     "vite": "^6.2.0"
-  }
+  },
+  "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
 }
